[tool.poetry]
name = "MAXPROJECT"
version = "0.1.0"
description = ""
authors = ["mank000 <kozmin_arti@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
maxapi = "==0.9.7"
python-dotenv = "==1.2.1"
tortoise-orm = {extras = ["asyncpg"], version = "^0.25.1"}
aerich = "^0.9.2"
apscheduler = "^3.11.1"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.aerich]
tortoise_orm = "max_bot.config.TORTOISE_ORM"
location = "max_bot/migrations"
src_folder = "max_bot/."

[tool.black]
line-length = 78
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
organizeImports = "explicit"
fixAll.pylance = "always"

[tool.isort]
profile = "black"